--- a/superset-frontend/tools/eslint-plugin-theme-colors/package.json
+++ b/superset-frontend/tools/eslint-plugin-theme-colors/package.json
@@ -9,5 +9,7 @@
   "keywords": [],
   "license": "Apache-2.0",
   "author": "Apache",
-  "dependencies": {}
+  "dependencies": {
+    "eslint-plugin-theme-colors": "file:"
+  }
 }
