--- a/superset-frontend/tools/eslint-plugin-translation-vars/package.json
+++ b/superset-frontend/tools/eslint-plugin-translation-vars/package.json
@@ -9,7 +9,9 @@
   "keywords": [],
   "license": "Apache-2.0",
   "author": "Apache",
-  "dependencies": {},
+  "dependencies": {
+    "eslint-plugin-translation-vars": "file:"
+  },
   "peerDependencies": {
     "eslint": ">=0.8.0"
   }
